[gd_scene load_steps=8 format=3 uid="uid://c57ov46rk55gm"]

[ext_resource type="Script" path="res://Scripts/Scene Scripts/menu.gd" id="1_l5o4r"]
[ext_resource type="TileSet" uid="uid://d25mxfjhyc5yv" path="res://tilesets/main.tres" id="2_5fw26"]
[ext_resource type="Script" path="res://Scripts/General Purpose/Camera2D.gd" id="3_kue43"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8epkb"]
b = Vector2(0, 112)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_byv71"]
a = Vector2(0, 3)
b = Vector2(0, -115)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ku067"]
a = Vector2(-1.5, -1.75)
b = Vector2(273.5, -1.75)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s0lij"]
a = Vector2(-1.5, 1.5)
b = Vector2(273.5, 1.5)

[node name="Menu" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l5o4r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 174.0
offset_top = 106.0
offset_right = 259.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="TileMap 2" type="TileMap" parent="."]
z_index = -1
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("2_5fw26")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 524288, 6, 327684, 458752, 6, 393220, 458752, 6, 458756, 262144, 6, 524292, 458752, 6, 589828, 458752, 6, 262149, 524288, 6, 327685, 524290, 13, 393221, 458752, 6, 458757, 262144, 6, 524293, 524290, 13, 589829, 524290, 13, 262150, 524288, 6, 327686, 262144, 6, 393222, 262144, 6, 458758, 262144, 6, 524294, 262144, 6, 589830, 262144, 6, 262151, 524288, 6, 327687, 262144, 6, 393223, 458752, 6, 458759, 458752, 6, 524295, 458752, 6, 589831, 262144, 6, 262152, 524288, 6, 327688, 262144, 6, 393224, 458752, 6, 458760, 458752, 6, 524296, 458752, 6, 589832, 262144, 6, 262153, 524288, 6, 327689, 262144, 6, 393225, 458752, 6, 458761, 458752, 6, 524297, 458752, 6, 589833, 262144, 6, 262154, 524288, 6, 327690, 262144, 6, 393226, 458752, 6, 458762, 458752, 6, 524298, 458752, 6, 589834, 262144, 6, 262155, 524288, 6, 327691, 262144, 6, 393227, 458752, 6, 458763, 458752, 6, 589835, 262144, 6, 262156, 524288, 6, 327692, 262144, 6, 393228, 458752, 6, 458764, 458752, 6, 524300, 458752, 6, 589836, 262144, 6, 262157, 524288, 6, 327693, 262144, 6, 393229, 458752, 6, 458765, 458752, 6, 524301, 458752, 6, 589837, 262144, 6, 262158, 524288, 6, 327694, 262144, 6, 393230, 458752, 6, 458766, 458752, 6, 524302, 458752, 6, 589838, 262144, 6, 262159, 524288, 6, 327695, 262144, 6, 393231, 458752, 6, 458767, 458752, 6, 524303, 458752, 6, 589839, 262144, 6, 262160, 524288, 6, 327696, 262144, 6, 393232, 458752, 6, 458768, 458752, 6, 524304, 458752, 6, 589840, 262144, 6, 262161, 524288, 6, 327697, 262144, 6, 393233, 458752, 6, 458769, 458752, 6, 524305, 458752, 6, 589841, 262144, 6, 262162, 524288, 6, 327698, 262144, 6, 393234, 262144, 6, 458770, 262144, 6, 524306, 262144, 6, 589842, 262144, 6, 262163, 524288, 6, 327699, 458752, 6, 393235, 458752, 6, 458771, 262144, 6, 524307, 458752, 6, 589843, 458752, 6, 262164, 524288, 6, 327700, 458752, 6, 393236, 458752, 6, 458772, 262144, 6, 524308, 458752, 6, 589844, 458752, 6, 524299, 458752, 6, 196612, 524288, 3, 196613, 524288, 3, 196614, 524288, 3, 196615, 524288, 3, 196616, 524288, 3, 196617, 524288, 3, 196618, 524288, 3, 196619, 524288, 3, 196620, 524288, 3, 196621, 524288, 3, 196622, 524288, 3, 196623, 524288, 3, 196624, 524288, 3, 196625, 524288, 3, 196626, 524288, 3, 196627, 524288, 3, 196628, 524288, 3, 131076, 327680, 1, 131077, 327680, 1, 131078, 327680, 1, 131079, 327680, 1, 131080, 327680, 1, 131081, 327680, 1, 131082, 327680, 1, 131083, 327680, 1, 131084, 327680, 1, 131085, 327680, 1, 131086, 327680, 1, 131087, 327680, 1, 131088, 327680, 1, 131089, 327680, 1, 131090, 327680, 1, 131091, 327680, 1, 131092, 327680, 1, 196611, 917504, 1, 262147, 917504, 2, 327683, 917504, 2, 393219, 393216, 2, 131075, 327680, 1, 131074, 327680, 1, 196610, 327680, 1, 262146, 327680, 1, 327682, 327680, 1, 393218, 327680, 2, 589827, 393216, 1, 524291, 393216, 0, 524290, 327680, 0, 589826, 327680, 1, 458755, 262144, 6, 458754, 262144, 6, 589845, 262144, 1, 524309, 720896, 0, 196629, 720896, 2, 262165, 720896, 1, 327701, 720896, 1, 393237, 262144, 2, 393238, 327680, 2, 524310, 327680, 0, 131093, 327680, 1, 131094, 327680, 1, 196630, 327680, 1, 262166, 327680, 1, 327702, 327680, 1, 589846, 327680, 1, 458773, 262144, 6, 458774, 262144, 6, 655362, 327680, 1, 720898, 327680, 1, 786434, 327680, 1, 655363, 393216, 1, 720899, 589824, 1, 786435, 327680, 1, 655364, 524288, 6, 720900, 393218, 7, 786436, 327680, 1, 655365, 524288, 6, 720901, 393218, 7, 786437, 327680, 1, 655366, 524288, 6, 720902, 393218, 7, 786438, 327680, 1, 655367, 524288, 6, 720903, 393218, 7, 786439, 327680, 1, 655368, 524288, 6, 720904, 393218, 7, 786440, 327680, 1, 655369, 524288, 6, 720905, 393218, 7, 786441, 327680, 1, 655370, 524288, 6, 720906, 393218, 7, 786442, 327680, 1, 655371, 524288, 6, 720907, 393218, 7, 786443, 327680, 1, 655372, 524288, 6, 720908, 393218, 7, 786444, 327680, 1, 655373, 524288, 6, 720909, 393218, 7, 786445, 327680, 1, 655374, 524288, 6, 720910, 393218, 7, 786446, 327680, 1, 655375, 524288, 6, 720911, 393218, 7, 786447, 327680, 1, 655376, 524288, 6, 720912, 393218, 7, 786448, 327680, 1, 655377, 524288, 6, 720913, 393218, 7, 786449, 327680, 1, 655378, 524288, 6, 720914, 393218, 7, 786450, 327680, 1, 655379, 524288, 6, 720915, 393218, 7, 786451, 327680, 1, 655380, 524288, 6, 720916, 393218, 7, 786452, 327680, 1, 655381, 262144, 1, 720917, 524288, 1, 786453, 327680, 1, 655382, 327680, 1, 720918, 327680, 1, 786454, 327680, 1)
layer_1/tile_data = PackedInt32Array(393219, 327682, 18, 458755, 327682, 19, 196617, 983042, 11, 393237, 327682, 18, 458773, 327682, 19, 196616, 917506, 11, 196624, 917504, 4, 196623, 851968, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="TileMap 2"]
z_index = 2
collision_layer = 4

[node name="LeftWall" type="CollisionShape2D" parent="TileMap 2/StaticBody2D"]
position = Vector2(62.5, 64)
shape = SubResource("SegmentShape2D_8epkb")

[node name="RightWall" type="CollisionShape2D" parent="TileMap 2/StaticBody2D"]
position = Vector2(337.5, 176)
shape = SubResource("SegmentShape2D_byv71")

[node name="TopWall" type="CollisionShape2D" parent="TileMap 2/StaticBody2D"]
position = Vector2(62.5, 64.25)
shape = SubResource("SegmentShape2D_ku067")

[node name="BottomWall" type="CollisionShape2D" parent="TileMap 2/StaticBody2D"]
position = Vector2(62.5, 176)
shape = SubResource("SegmentShape2D_s0lij")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 480)
zoom = Vector2(0.917, 0.985)
script = ExtResource("3_kue43")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
